# data_structures_practice4

./: CMakeLists.txt  main.c
tadbasics/: cell.c  cell.h  graph.c  graph.h  stack.c  stack.h  xcpt.c  xcpt.h
